# japp

./: .gitignore  .ignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  Rocket.toml  Secrets.dev.toml  Shuttle.toml  app.yaml  deploy.sh  rustfmt.toml
.github/workflows/: code-checks.yml  deploy.yml
resources/: animals.txt  colors.txt
src/: api.rs  main.rs  web_router.rs
src/application/: database.rs  error.rs  mod.rs  participant_id.rs  static_folder.rs
src/domain/: domain.rs  mod.rs  session.rs  static_folder.rs
src/events/: command.rs  message.rs  message_stream.rs  mod.rs
src/events/commands/: join_participant.rs  mod.rs
src/http/: catchers.rs  events.rs  mod.rs  session.rs  statics.rs
src/http/api/: mod.rs
src/http/api/session/: create_session_request.rs  create_session_response.rs  log_into_session_response.rs  mod.rs  (+2 more)
src/usecase/: command_runner.rs  generate_session_name.rs  mod.rs  secrets.rs
web/: index.html  jest.config.js  package.json  pnpm-lock.yaml  vite.config.ts
web/public/: 404.html  index.html  landing.html
web/public/assets/: footer-inject.js  landing.css  site.webmanifest  styles.css
web/src/: Routes.tsx  index.tsx  react-app-env.d.ts  setupTests.ts
web/src/common/: input.css  input.tsx  page.tsx  spinner.css  spinner.tsx  use-backend.tsx
web/src/create-session/: create-session.tsx
web/src/join-session/: is-session-link-valid.tsx  join-session.spec.tsx  join-session.tsx
web/src/session/: events.ts  session-state.tsx  session-view.tsx  session.tsx  set-name.tsx  use-event-stream.tsx  use-session-params.ts
(+14 files in other folders)
