[package]
name = "japp"
version = "0.0.1"
edition = "2021"
authors = ["Yuri Becker <hi@yuri.li>"]
readme = "README.md"
homepage = "https://japp.yuri.li"
license = "AGPL-3.0-only"
publish = false

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets", "json"] }
schemars = "0.8.10"
okapi = { version = "0.7.0-rc.1" }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
mongodb = "2.3.0"
ring = "0.16.20"
data-encoding = "2.3.2"
log = "0.4.17"
env_logger = "0.9.0"
shuttle-runtime = "0.20.0"
shuttle-rocket = "0.20.0"
tokio = "1.29.1"
shuttle-secrets = "0.20.0"
shuttle-shared-db = {version = "0.20.0", features = ["mongodb"] }
shuttle-static-folder = "0.20.0"
cargo-watch = "8.4.0"
